fix: 测试代码格式自动校验

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "fabricjs_vue",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -20,16 +19,20 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^17.1.0",
     "@vitejs/plugin-vue": "^3.0.3",
+    "babel-eslint": "^10.1.0",
     "commitizen": "^4.2.5",
     "commitlint": "^17.1.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-vue": "^9.4.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "sass": "^1.54.5",
+    "ts-node": "^10.9.1",
     "vite": "^3.0.7",
     "vite-plugin-cross-origin-isolation": "^0.1.6"
   },
