--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,4 @@
 {
-    "*.{js,ts,vue}": "eslint --fix",
-    "*.scss": "prettier --write"
-  }
-  
+  "*.{js,jsx,ts,tsx}": ["prettier --write .", "eslint  --fix"],
+  "*.md": ["prettier --write"]
+}
