--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "canvas2video": "^1.1.4",
     "element-plus": "^2.2.14",
     "fabric": "^5.2.4",
+    "file-saver": "^2.0.5",
+    "gifuct-js": "^2.1.2",
     "vue": "^3.2.37"
   },
   "devDependencies": {
