feat: 页面布局二(标尺相关交互)

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "@scena/guides": "^0.28.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.8",
+    "framework-utils": "^1.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
