--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "vue-fabric-editor",
+  "name": "vue-design-editor",
   "version": "0.1.0",
   "private": true,
   "description": "基于fabric.js和Vue的图片、视频编辑器",
+  "keywords": [
+    "fabric",
+    "vue",
+    "vue3",
+    "element-plus",
+    "图片编辑器"
+  ],
   "scripts": {
     "dev": "vite",
     "serve": "vue-cli-service serve",
@@ -15,13 +22,16 @@
     "@scena/guides": "^0.28.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.8",
+    "fabric": "^5.3.0",
     "framework-utils": "^1.1.0",
+    "uuid": "^9.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.1.0",
+    "@types/fabric": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue": "^4.2.3",
