--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@scena/guides": "^0.28.0",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.8",
+    "epic-spinners": "^2.0.0",
     "fabric": "^5.3.0",
     "framework-utils": "^1.1.0",
     "lodash-es": "^4.17.21",
