--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "typescript": "~4.5.5",
-    "vite": "^4.4.3"
+    "vite": "^4.4.3",
+    "vite-plugin-require-transform": "^1.0.21"
   },
   "config": {
     "commitizen": {
