--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vite-plugin-require-transform": "^1.0.21",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-colorpicker": "^2.2.2",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
