--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@scena/guides": "^0.28.0",
+    "@vueuse/core": "^10.6.0",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.8",
@@ -28,11 +29,11 @@
     "fabric": "^5.3.0",
     "framework-utils": "^1.1.0",
     "lodash-es": "^4.17.21",
+    "colorpickers": "^1.0.0",
     "uuid": "^9.0.0",
     "vite-plugin-require-transform": "^1.0.21",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vue3-colorpicker": "^2.2.2",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
