feat: 1、json打印和图片下载 2、psd上传和解析 3、修复缩放控制模块bug

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@scena/guides": "^0.28.0",
     "@vueuse/core": "^10.6.0",
     "axios": "^1.4.0",
+    "buffer": "^6.0.3",
     "colorpickers": "^1.0.4",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.8",
@@ -30,6 +31,7 @@
     "fabric": "^5.3.0",
     "framework-utils": "^1.1.0",
     "lodash-es": "^4.17.21",
+    "psd.js": "^3.9.0",
     "uuid": "^9.0.0",
     "vite-plugin-require-transform": "^1.0.21",
     "vue": "^3.2.13",
