feat: psd版本问题导致group数据位置和宽高解析错误

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "fabric": "^5.3.0",
     "framework-utils": "^1.1.0",
     "lodash-es": "^4.17.21",
-    "psd.js": "^3.9.0",
+    "psd.js": "3.6.3",
     "uuid": "^9.0.0",
     "vite-plugin-require-transform": "^1.0.21",
     "vue": "^3.2.13",
